<resources>
    <string name="app_name">Password Generator</string>
    <string name="label_tabItemRandom">Random Password</string>
    <string name="label_tabItemHash">Hash Phrase</string>
    <string name="label_switchUpperCase">Upper Case (A&#8211;Z)</string>
    <string name="label_switchLowerCase">Lower Case (a&#8211;z)</string>
    <string name="label_switchNumbers">Numbers (0&#8211;9)</string>
    <string name="label_switchSpecial">Special characters</string>
    <string name="label_textViewPassword">Password</string>
    <string name="label_textViewLength">Password Length</string>
    <string name="label_imageButtonCopy">Copy Password</string>
    <string name="label_imageButtonRefresh">Refresh Password</string>
    <string name="label_textViewHashLabel">Password Hash</string>
    <string name="label_textViewPassphrase">Passphrase</string>
    <string name="label_textViewAlgorithm">Algorithm</string>
    <string name="label_radioButtonAlgoMD5" translatable="false">MD5</string>
    <string name="label_radioButtonSHA256" translatable="false">SHA&#8211;256</string>
    <string name="label_copy_action">Copied to Clipboard</string>
    <string name="label_refresh_password_action">The Password was Refreshed</string>
    <string name="label_action_about">About</string>

    <string name="text_about_header">%1$s ver.%2$s</string>
    <string name="text_about_support">Contact me at <b>info@msav.ru</b> for any questions, requests or comments.</string>
    <string name="text_about_feedback">Feedback</string>
    <string name="text_about_copy">2018 © Andrey Mishchenko</string>
    <string name="text_about_site" translatable="false">www.msav.ru</string>
</resources>
